<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tof_camera_example</name>
  <version>1.4.2</version>
  <description>TOF Package example node/components</description>
  <maintainer email="btop_support@toppan.co.jp">TOPPAN Holdings Inc.</maintainer>
  <url>https://www.toppan.com/en/electronics/device/tof/</url>
  <license>see LICENSE.txt</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tof_camera_interface</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
