<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tof_camera_param</name>
  <version>1.4.2</version>
  <description>TOF Package parameters</description>
  <maintainer email="btop_support@toppan.co.jp">TOPPAN Holdings Inc.</maintainer>
  <url>https://www.toppan.com/en/electronics/device/tof/</url>
  <license>see LICENSE.txt</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
